--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@liveblocks/client": "^3.13.0",
+    "@liveblocks/react": "^3.13.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.26.1",
     "next": "^16.1.1",
