--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@liveblocks/react": "^3.13.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.26.1",
-    "next": "^16.1.1",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "next": "^16.1.2",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
