--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@liveblocks/react": "^3.13.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.26.1",
+    "gsap": "^3.14.2",
     "next": "^16.1.4",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
