--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.36.8",
-    "@liveblocks/client": "^3.13.0",
-    "@liveblocks/react": "^3.13.0",
+    "@liveblocks/client": "3.13.3",
+    "@liveblocks/node": "^3.13.3",
+    "@liveblocks/react": "3.13.3",
     "clsx": "^2.1.1",
     "framer-motion": "^12.26.1",
     "gsap": "^3.14.2",
